--- a/README.Rmd
+++ b/README.Rmd
@@ -33,3 +33,5 @@ drought = computenspi(monthlyRainfall = rain, stationary = FALSE, spiScale = 12)
 # Plot NSPI
 plot(drought)
 ```
+
+[]("README_files/figure-gfm/unnamed-chunk-2-1.png")
