--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(echo = TRUE,
 
 <img src="https://raw.githubusercontent.com/mammask/droughtr/main/man/figures/droughtR.png" align = "right" width = 120/>
 
-droughtR is an R for package that enables drought monitoring and drought forecasting. It computes the Standardized Precipitation Index (SPI) and the Non-Standardized Precipitation Index (NSPI) using General Additive Models for Location Scale and Shape (GAMLSS). It enables the generation of drought forecasts for univariate time series and deals with the bias introduced to drought forecasting applications when SPI and NSPI are calculated incorrectly during out-of-sample (OOS) validation.
+droughtR is an R for package that enables drought monitoring. It computes the Standardized Precipitation Index (SPI) and the Non-Standardized Precipitation Index (NSPI) using General Additive Models for Location Scale and Shape (GAMLSS).
 
 ```{r, echo = FALSE}
 knitr::opts_chunk$set(
