--- a/README.Rmd
+++ b/README.Rmd
@@ -64,6 +64,16 @@ plot(statdrought)
 
 ### Compute the Drought Events
 
+`computeclass` returns the classification of drought events over time:
+
+```{r, eval=TRUE, fig.height=3, fig.width=9, fig.align='center'}
+# Compute drought class
+indexClass = computeclass(nonstatdrought)
+
+# Plot drought events over time
+plot(indexClass)
+```
+
 ### Model-Based Comparison of Drought Indices
 
 Using droughtR, we can compute indices under various distribution assumptions and then compare their fit according to how well they describe the data. Extending the previous example, we can compare the model residuals of the fitted model-based indices: 
